--- a/style.css
+++ b/style.css
@@ -1,48 +1,49 @@
-@font-face {
+/* @font-face {
   font-family: "Roboto";
   src: url(./fonts/Roboto/Roboto-Medium.ttf);
+} */
+@import url("https://fonts.googleapis.com/css?family=Roboto:500&display=swap");
+
+body {
+  margin: 0;
 }
 
-ul {
+.link-ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding-inline-start: 0;
+  display: flex;
 }
 
-li {
-  float: left;
+.links-li {
+  margin-right: 20px;
+  font-family: Roboto;
+  font-size: 12px;
+  line-height: 14px;
 }
 
-li a {
+.links-li:last-child {
+  margin-right: 0;
+}
+
+.links {
+  display: block;
+  position: relative;
   line-height: 60px;
-  margin: 10px;
-  padding-bottom: 22.5px;
-  padding-top: 22.5px;
-  text-align: center;
+  height: 60px;
+  text-transform: uppercase;
   text-decoration: none;
   color: black;
 }
 
-nav {
-  margin-right: 50px;
-}
-
 .header-box {
-  position: absolute;
-  width: 100%;
   height: 60px;
-  left: 0;
-  top: 0;
-  background: #fff;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 50px;
+  background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-  font-family: "Roboto";
-  font-size: 12px;
-  font-weight: 500;
-  text-transform: uppercase;
   display: flex;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-
 }
 
 .logo {
@@ -70,9 +71,9 @@ nav {
   position: absolute;
   width: 100%;
   height: 4px;
+  background-color: #00acdc;
+  border-radius: 8px;
   left: 0;
   bottom: 0;
   color: #00acdc;
-  background-color: #00acdc;
-  border-radius: 8px;
 }
